[Java] Use Constructor to avoid deprecation warning in Java 10.